--- a/components/Hero/index.module.scss
+++ b/components/Hero/index.module.scss
@@ -1,93 +1,171 @@
+@import "/styles/bulma/sass/utilities/mixins.sass";
 $left: #002f3a;
 $right: rgb(0, 0, 0);
 .hero {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
-    position: relative;
-    overflow: hidden;
     align-items: center;
-    // background: black;
-    background: $left;
-    background: -webkit-radial-gradient(left, $left, $right, $right);
-    background: -moz-radial-gradient(left, $left, $right, $right);
-    background: radial-gradient(to right, $left, $right, $right);
+    background: radial-gradient(left, $left -10%, $right 60%);
+    @include mobile {
+        flex-direction: column;
+        background: black;
+    }
 }
-.main__img__container {
+
+.blur {
     position: absolute;
-    top: -100px;
-    right: -100px;
-    width: 750px;
-    height: 750px;
-    // z-index: 0;
-    .blur {
-        // backdrop-filter: blur(20px);
-        // background-color: red;
-        position: absolute;
-        right: 0;
-        width: 110%;
-        height: 110%;
-        z-index: 1;
-        // border-radius: 50%;
-        background: #000000;
-        backdrop-filter: blur(30px);
-        // -webkit-backdrop-filter: blur(20px);
+    right: 0;
+    top: 0;
+    width: 105%;
+    height: 105%;
+    z-index: 40;
+    border-radius: 50%;
+    background: rgb(0, 0, 0);
+    backdrop-filter: blur(35px);
+    @include mobile {
+        width: 105%;
+        height: 105%;
+        backdrop-filter: blur(15px);
+    }
+}
+.food__container {
+    position: relative;
+    @include mobile {
+        display: flex;
+        justify-content: center;
     }
     .food {
         width: 100%;
         height: 100%;
         object-fit: contain;
+        @include mobile {
+            width: 90%;
+            margin-top: 4rem;
+            z-index: 35;
+        }
+    }
+}
+.main__img__container {
+    position: absolute;
+    top: -150px;
+    right: -150px;
+    width: 750px;
+    height: 750px;
+    z-index: 31;
+    @include widescreen-only {
+        top: -100px;
+        right: -100px;
+        width: 650px;
+        height: 650px;
+    }
+    @include desktop-only {
+        top: -100px;
+        right: -100px;
+        width: 450px;
+        height: 450px;
+    }
+    @include tablet-only {
+        top: -100px;
+        right: -100px;
+        width: 450px;
+        height: 450px;
+    }
+    @include mobile {
+        display: none;
     }
 }
 .waves__img__1 {
     position: absolute;
-    top: -200px;
-    right: -200px;
+    top: -80px;
+    right: -80px;
     z-index: 20;
 }
 .waves__img__2 {
     position: absolute;
-    top: -400px;
-    right: -400px;
+    top: -150px;
+    right: -150px;
     z-index: 20;
 }
 
 .main__container {
-    padding-left: 10rem;
+    padding-left: 6rem;
+    @include until-fullhd {
+        padding-left: 5%;
+    }
+    @include mobile {
+        padding-left: 0%;
+        flex-grow: 1;
+        margin: 0rem 1rem;
+    }
 }
 .banner__text {
     font-size: 14rem;
     line-height: 16rem;
     font-weight: 600;
+    @include desktop-only {
+        font-size: 12rem;
+        line-height: 13rem;
+    }
+    @include tablet-only {
+        font-size: 10rem;
+        line-height: 11rem;
+    }
+    @include mobile {
+        font-size: 5rem;
+        line-height: 6rem;
+    }
 }
 .emoji__parent {
     display: flex;
     align-items: flex-end;
+    span {
+        height: 180px;
+        width: 180px;
+        margin: 1rem;
+
+        @include mobile {
+            height: 75px;
+            width: 75px;
+            margin: 0.5rem;
+        }
+    }
 }
 .nav {
     margin-left: 4rem;
     span {
         margin-right: 2rem;
     }
+    @include mobile {
+        margin-left: 1.5rem;
+        span {
+            margin-right: 1rem;
+        }
+    }
 }
 
-$button_color: rgba(221, 219, 219, 0.493);
+$button_color: rgba(255, 255, 255, 0.515);
 .custom__button {
     color: $button_color;
-    border: 2px solid $button_color;
-    background-color: transparent;
-    border-radius: 15px;
+    border-radius: 10px;
     font-weight: 700;
-    // font-size: 1.2rem !important;
+    transition: box-shadow 0.1s ease-out, transform 0.1s ease-out;
+    margin-right: 1rem !important;
+    &:hover {
+        box-shadow: 2px 4px $button_color;
+        transform: translateY(-3px) translateX(-2px);
+    }
+    &:active {
+        box-shadow: 0px 0px $button_color;
+        transform: translateY(0px) translateX(0px);
+    }
 
     .divider {
         display: block;
         height: 80%;
         border-left: 2px solid $button_color;
-        margin-right: 0.5em;
-        margin-left: 0.5em;
+        margin: 0 0.5em;
     }
-    &:hover {
-        border: 2px solid $button_color;
-        color: $button_color;
+    @include mobile {
+        margin-right: 0.5rem !important;
     }
 }
