--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,8 +14,29 @@ $right__gradient: #ff7878;
 
 body {
   background-color: black;
+  position: relative;
+  overflow: hidden;
 }
 
 .fast__text {
   font-family: "Satisfy", cursive;
+}
+
+/* width */
+.l__opacity {
+  opacity: 0.7;
+}
+
+::-webkit-scrollbar {
+  width: 0.3em;
+  height: 0.3em;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgb(0, 0, 0);
+}
+::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 0.5em;
+  margin: 0.2rem;
 }
